--- a/src/main/webapp/style/main.css
+++ b/src/main/webapp/style/main.css
@@ -3,10 +3,16 @@ body{
     display: flex;
     flex-direction: column;
 }
+/*footer{*/
+/*    margin-top: auto;*/
+/*    height: 8rem;*/
+/*}*/
 
-footer{
-    margin-top: auto;
+footer {
+    /*position: fixed;*/
     height: 8rem;
+    bottom: 0;
+    width: 100%;
 }
 
 .brand-logo {
